# YoloOCLInference

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  YoloOCLMain.cpp
src/Kernels/: DeepNNFP32.cl
src/OpenCL/: OCLManager.cpp  clutils.cpp  kernel_launcher.cpp  program.cpp
src/OpenCL/include/: OCLManager.h
src/Utilities/: InitUtils.cpp  NetIniFileOp.cpp
src/Utilities/include/: GlobalDefines.h  InitUtils.h  NetIniFileOp.h
src/VideoProcessing/: YoloOCLDNN.cpp
src/VideoProcessing/include/: YoloOCLDNN.h
test/: CMakeLists.txt  testImg2Array7x7.cpp
